data/all_generated_tests/raw_wast_tests/call_indirect_EdgeCaseFailuresinbr_table_4664.wast
;; 3. **Test Description**: Use `call_indirect` with an index exactly at the table’s boundary, validating correct function call without trapping.    - **Constraint Checked**: Confirms the `call_indirect` instruction correctly accesses the edge element of the table.    - **Relation to `br_table` Edge Case**: Tests boundary handling similar to the upper limit of jump targets in `br_table`.

(assert_invalid
  (module
    (type (func (param i32)))
    (table 1 funcref)
    (elem (i32.const 0) $f)
    (func $f (type 0) (param i32))
    (func $boundary-test
      (call_indirect (type 0) (i32.const 0))
    )
  )
  "index out of bounds"
)